<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarInmuebleActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="INFORMACION INMUEBLE"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/txtDireccionEditarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtNumeroEditarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/numero"
            android:inputType="number"
            android:maxLength="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/txtCiudadEditarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ciudad"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtProvinciaEditarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/provincia"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/txtCPEditarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/cp"
            android:inputType="number"
            android:maxLength="5" />

        <RatingBar
            android:id="@+id/rbValoracionEditarInmueble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="5"
            android:stepSize=".5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnEliminarEditarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/eliminar"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnEditarEditarInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/editar"
            app:cornerRadius="0dp" />
    </LinearLayout>

</LinearLayout>